package com.example.ticketbooking;

public class Application {
    public static void main(String[] args) {
        System.out.println("Ticket Booking application skeleton — run mvn test to verify setup.");
    }
}
