@startuml
class com.example.ticketbooking.Models.Show {
- String showId
- Movie movie
- Hall hall
- Date startTime
- Date endTime
- int duration
- Cinema playedAt
- double price
+ int getAvailableSeats()
+ ArrayList<Seat> selectSeats(int)
}


class com.example.ticketbooking.Manager.BookingManager {
- {static} BookingManager instance
- PaymentStrategy paymentStrategy
+ {static} BookingManager getInstance()
~ void setPaymentStrategy(PaymentStrategy)
~ Booking bookShow(Show,User,int)
}


class com.example.ticketbooking.Application {
+ {static} void main(String[])
}

class com.example.ticketbooking.Models.User {
~ String name
~ Enums.City city
~ Enums.Role role
}

class com.example.ticketbooking.Models.User$UserBuilder {
~ String name
~ Enums.City city
~ Enums.Role role
+ UserBuilder setName(String)
+ UserBuilder setCity(Enums.City)
+ UserBuilder setRole(Enums.Role)
+ User build()
}


class com.example.ticketbooking.Models.Movie {
- String name
- int duration_in_minutes
- Enums.Genre genre
- Enums.Language language
- ArrayList<Show> shows
}

class com.example.ticketbooking.Models.Cinema {
- Enums.City city
- String name
- String address
~ ArrayList<Hall> halls
~ ArrayList<Show> shows
~ HashMap<Movie,ArrayList<Show>> movieToShowsMap
~ void addShow(Show)
+ void addHall(Hall)
~ ArrayList<Show> getShowsByMovie(Movie)
}


class com.example.ticketbooking.Builder.Payment {
- Enums.PaymentType paymentType
- double amount
- Date paymentDate
- User user
- Enums.PaymentStatus paymentStatus
- String description
- String phoneNumber
+ void setPaymentStatus(Enums.PaymentStatus)
}


class com.example.ticketbooking.Builder.Payment$PaymentBuilder {
- Enums.PaymentType paymentType
- double amount
- Date paymentDate
- User user
- Enums.PaymentStatus paymentStatus
- String description
- String phoneNumber
+ PaymentBuilder setDescription(String)
+ PaymentBuilder setPhoneNumber(String)
+ Payment build()
}


class com.example.ticketbooking.Factory.PaymentFactory.PaymentFactory {
- {static} PaymentFactory instance
+ {static} PaymentFactory getInstance()
+ PaymentStrategy createPayment(String)
}


class com.example.ticketbooking.Models.Hall {
- String name
- int totalSeats
- Enums.ScreenType screenType
- List<Slot> slots
~ int getAvailableSeatsForShow(Show)
~ ArrayList<Seat> getSeatsForShow(Show)
+ boolean canAddShow(Date,Date)
}


class com.example.ticketbooking.Models.Booking {
~ User user
~ Show show
~ ArrayList<Seat> seats
~ Enums.BookingStatus bookingStatus
~ Payment payment
}

class com.example.ticketbooking.Models.Seat {
- int row
- char column
- boolean isEmpty
+ boolean isEmpty()
+ void setEmpty(boolean)
+ String toString()
}


interface com.example.ticketbooking.Proxy.CinemaProxy.CinemaManage {
+ Cinema createCinema(Enums.City,String,String)
+ void createHall(Cinema,String,int,Enums.ScreenType)
+ Show createShow(Cinema,Hall,Movie,Date,Date,double)
+ Movie createMovie(String,int,Enums.Genre,Enums.Language)
}

interface com.example.ticketbooking.Strategy.PaymentStrategy.PaymentStrategy {
+ Payment processPayment(User,double)
}

class com.example.ticketbooking.Strategy.PaymentStrategy.UPIpayment {
- String upiId
+ Payment processPayment(User,double)
}


class com.example.ticketbooking.Strategy.PaymentStrategy.CardPayment {
- String cardNumber
- String cardHolderName
- String expiryDate
- String cvv
+ Payment processPayment(User,double)
}


class com.example.ticketbooking.Manager.CinemaManager {
+ Cinema createCinema(Enums.City,String,String)
+ void createHall(Cinema,String,int,Enums.ScreenType)
+ Show createShow(Cinema,Hall,Movie,Date,Date,double)
+ Movie createMovie(String,int,Enums.Genre,Enums.Language)
}

class com.example.ticketbooking.Models.Slot {
- Date from
- Date to
- ArrayList<Seat> seats
- String showId
}

class com.example.ticketbooking.Proxy.CinemaProxy.CinemaProxy {
- CinemaManage CinemaManager
- User user
~ boolean verifyAdminAccess(User)
+ Cinema createCinema(Enums.City,String,String)
+ void createHall(Cinema,String,int,Enums.ScreenType)
+ Show createShow(Cinema,Hall,Movie,Date,Date,double)
+ Movie createMovie(String,int,Enums.Genre,Enums.Language)
}


class com.example.ticketbooking.Enum.Enums {
}
enum com.example.ticketbooking.Enum.Genre {
+  ACTION
+  COMEDY
+  DRAMA
+  HORROR
+  ROMANCE
+  THRILLER
+  DOCUMENTARY
+  ANIMATION
+  OTHER
}

enum com.example.ticketbooking.Enum.City {
+  MUMBAI
+  DELHI
+  BANGALORE
+  HYDERABAD
+  CHENNAI
+  KOLKATA
+  OTHER
}

enum com.example.ticketbooking.Enum.Language {
+  ENGLISH
+  HINDI
+  FRENCH
+  SPANISH
+  OTHER
}

enum com.example.ticketbooking.Enum.SeatStatus {
+  EMPTY
+  RESERVED
+  OCCUPIED
+  UNAVAILABLE
}

enum com.example.ticketbooking.Enum.ScreenType {
+  TWO_D
+  THREE_D
+  IMAX
+  FOUR_D
+  OTHER
}

enum com.example.ticketbooking.Enum.Role {
+  ADMIN
+  CUSTOMER
}

enum com.example.ticketbooking.Enum.PaymentType {
+  CARD
+  NET_BANKING
+  UPI
+  OTHER
}

enum com.example.ticketbooking.Enum.BookingStatus {
+  CONFIRMED
+  CANCELLED
+  PENDING
+  REVERT
}

enum com.example.ticketbooking.Enum.PaymentStatus {
+  SUCCESS
+  FAILED
+  PENDING
+  REVERT
+  REFUNDED
}



com.example.ticketbooking.Models.User +.. com.example.ticketbooking.Models.User$UserBuilder
com.example.ticketbooking.Builder.Payment +.. com.example.ticketbooking.Builder.Payment$PaymentBuilder
com.example.ticketbooking.Strategy.PaymentStrategy.PaymentStrategy <|.. com.example.ticketbooking.Strategy.PaymentStrategy.UPIpayment
com.example.ticketbooking.Strategy.PaymentStrategy.PaymentStrategy <|.. com.example.ticketbooking.Strategy.PaymentStrategy.CardPayment
com.example.ticketbooking.Proxy.CinemaProxy.CinemaManage <|.. com.example.ticketbooking.Manager.CinemaManager
com.example.ticketbooking.Proxy.CinemaProxy.CinemaManage <|.. com.example.ticketbooking.Proxy.CinemaProxy.CinemaProxy
@enduml